--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -101,7 +101,12 @@ textarea{
 	height:100%;
 }
 
-#main_table_sidebar{
+#main_table_sidebar_left{
+	width: 20%;
+	min-width: 20%;
+}
+
+#main_table_sidebar_right{
 	width: 20%;
 	min-width: 20%;
 }
@@ -123,6 +128,11 @@ textarea{
         0 2px 2px rgba(0,0,0,0.2),
         0 1px 5px rgba(0,0,0,0.2),
         0 0 0 12px rgba(255,255,255,0.4);
+}
+
+#main_chat_container{
+	height:100%;
+	min-height:100%;
 }
 
 #main_chat_textinput{
@@ -151,7 +161,6 @@ textarea{
 }
 
 #main_q{
-	margin-left: 5px;
 	margin-right:5px;
 	border:1px solid #ECD6BF;
 	padding: 3px;
@@ -166,7 +175,6 @@ textarea{
 }
 
 #main_stream{
-	margin-left:5px;
 	border:1px solid #ECD6BF;
 	padding: 3px;
 	height: auto !important;
@@ -180,7 +188,6 @@ textarea{
 }
 
 #main_controls{
-	margin-left: 5px;
 	border-radius: 4px;
     padding: 3px;
     margin-top: 10px;
@@ -195,4 +202,30 @@ textarea{
 
 #main_maxspeed{
 	height:100px;
+}
+
+#main_close_left{
+	margin-left:3px;
+	height:20px;
+	width:20px;
+}
+
+#main_open_left{
+	margin-left:3px;
+	height:20px;
+	width:20px;
+	display:none
+}
+
+#main_close_right{
+	margin-left:3px;
+	height:20px;
+	width:20px;
+}
+
+#main_open_right{
+	margin-left:3px;
+	height:20px;
+	width:20px;
+	display:none
 }
