--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -229,3 +229,16 @@ textarea{
 	width:20px;
 	display:none
 }
+
+#admin_menu{
+	margin-left:10px;
+	margin-top:10px;
+}
+
+#admin_menuicons{
+	margin-top:4px;
+}
+
+.ui-icon-carat-1-e{
+	margin-top:4px !important;
+}
