--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -135,6 +135,12 @@ textarea{
 	min-height:100%;
 }
 
+#main_q_container{
+	height:100%;
+	min-height:100%;
+}
+
+
 #main_chat_textinput{
     border:1px solid #ECD6BF;
     margin-left:10px;
@@ -172,6 +178,10 @@ textarea{
         0 2px 2px rgba(0,0,0,0.2),
         0 1px 5px rgba(0,0,0,0.2),
         0 0 0 12px rgba(255,255,255,0.4);
+}
+
+#main_qsubmit{
+	margin-top:10px;
 }
 
 #main_stream{
