--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -342,6 +342,33 @@ width:100%;
 	margin-top:4px;
 }
 
+#admin_usertb{
+	margin-left:5px;
+	border:1px solid #ECD6BF;
+	padding: 3px;
+	width:23.5%;
+	min-width:23%;
+	border-radius: 4px;
+	box-shadow:
+        0 2px 2px rgba(0,0,0,0.2),
+        0 1px 5px rgba(0,0,0,0.2),
+        0 0 0 12px rgba(255,255,255,0.4);
+}
+
+#admin_userdt{
+	float:center;
+	margin-left:5px;
+	margin-right:5px;
+	border:1px solid #ECD6BF;
+	padding-left: 20px; 
+	padding-right: 20px;
+	border-radius: 4px;
+	box-shadow:
+        0 2px 2px rgba(0,0,0,0.2),
+        0 1px 5px rgba(0,0,0,0.2),
+        0 0 0 12px rgba(255,255,255,0.4);
+}
+
 .ui-icon-carat-1-e{
 	margin-top:4px !important;
 }
