--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -120,6 +120,7 @@ textarea{
 	margin-left:5px;
 	border:1px solid #ECD6BF;
 	padding: 3px;
+	width: 96%;
 	height: auto !important;
 	height: 75%;
 	min-height: 75%;
