--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -332,42 +332,26 @@ width:100%;
 	display:none
 }
 
-
-
 #admin_menu{
 	margin-left:10px;
 	margin-top:10px;
+	float:left;
 }
 
 #admin_menuicons{
 	margin-top:4px;
 }
 
-#admin_usertb{
-	margin-left:5px;
-	border:1px solid #ECD6BF;
-	padding: 3px;
-	width:23.5%;
-	min-width:23%;
-	border-radius: 4px;
-	box-shadow:
-        0 2px 2px rgba(0,0,0,0.2),
-        0 1px 5px rgba(0,0,0,0.2),
-        0 0 0 12px rgba(255,255,255,0.4);
+#admin_usercontainer{
+	margin-left:10px;
+	margin-top:10px;
+	float:left;
 }
 
-#admin_userdt{
-	float:center;
-	margin-left:5px;
-	margin-right:5px;
-	border:1px solid #ECD6BF;
-	padding-left: 20px; 
-	padding-right: 20px;
-	border-radius: 4px;
-	box-shadow:
-        0 2px 2px rgba(0,0,0,0.2),
-        0 1px 5px rgba(0,0,0,0.2),
-        0 0 0 12px rgba(255,255,255,0.4);
+#admin_logcontainer{
+	margin-left:10px;
+	margin-top:10px;
+	float:left;
 }
 
 .ui-icon-carat-1-e{
