--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -354,9 +354,21 @@ width:100%;
 	float:left;
 }
 
-#admin_edit{
-	margin-top:45px;
-	margin-left:10px;
+#admin_box{
+	border:1px solid #ECD6BF;
+	padding: 3px;
+	margin-left:5px;
+	margin-top:5px;
+	width:22%;
+	border-radius: 4px;
+	box-shadow:
+        0 2px 2px rgba(0,0,0,0.2),
+        0 1px 5px rgba(0,0,0,0.2),
+        0 0 0 12px rgba(255,255,255,0.4);	
+}
+
+#admin_add{
+	width:100%;
 }
 
 #about_frame{
