settings layout changed
jenja
jenja.dietrich@googlemail.com

--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -359,7 +359,7 @@ width:100%;
 	padding: 3px;
 	margin-left:5px;
 	margin-top:5px;
-	width:22%;
+	width:230px;
 	border-radius: 4px;
 	box-shadow:
         0 2px 2px rgba(0,0,0,0.2),
@@ -367,8 +367,17 @@ width:100%;
         0 0 0 12px rgba(255,255,255,0.4);	
 }
 
-#admin_add{
-	width:100%;
+#admin_setting{
+	border:1px solid #ECD6BF;
+	padding: 3px;
+	margin-left:8px;
+	width:545px;
+	float:left;
+	border-radius: 4px;
+	box-shadow:
+        0 2px 2px rgba(0,0,0,0.2),
+        0 1px 5px rgba(0,0,0,0.2),
+        0 0 0 12px rgba(255,255,255,0.4);	
 }
 
 #about_frame{
