--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -107,8 +107,8 @@ textarea{
 }
 
 #main_table_sidebar_right{
-	width: 20%;
-	min-width: 20%;
+	width: 20%;  
+	min-width: 200px;
 }
 
 #main_table_stream{
@@ -140,7 +140,6 @@ textarea{
 	height:100%;
 	min-height:100%;
 }
-
 
 #main_chat_textinput{
     border:1px solid #ECD6BF;
@@ -208,8 +207,9 @@ textarea{
 	position:absolute;
 	bottom:0;
 	left:1;
-	padding-left:8px;
-	padding-right:8px;
+	font-size:14px;
+	padding-left:3px;
+	padding-right:3px;
 	margin-bottom:50px;
 }
 
@@ -217,8 +217,9 @@ textarea{
 	position:absolute;
 	bottom:0;
 	right:0;
-	padding-left:8px;
-	padding-right:8px;
+	font-size:14px;
+	padding-left:3px;
+	padding-right:3px;
 	margin-bottom:50px;
 }
 
