--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -95,8 +95,14 @@ textarea{
 	text-align:center;	
 }
 
+#main_top_message{
+	float: left; 
+	margin-top:3px; 
+	margin-left:45%;
+}
+
 #main_table{
-	margin-top:20px;
+	margin-top:5px;
 	width: 100%;
 	height:100%;
 }
