--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -183,6 +183,7 @@ textarea{
 	height: auto !important;
 	height: 75%;
 	min-height: 75%;
+	min-width:200px;
 	border-radius: 4px;
 	box-shadow:
         0 2px 2px rgba(0,0,0,0.2),
@@ -190,47 +191,60 @@ textarea{
         0 0 0 12px rgba(255,255,255,0.4);
 }
 
-#main_qsubmit{
-	margin-top:10px;
+#main_qsubmitleft{
 	width:100%;
 }
 
-#main_logout{
+#main_button_container{
 	position:absolute;
-	bottom:0;	
-	right:0;
+	bottom:0;
+	width:19%;
 	margin-bottom:5px;
+	height:20%;
+}
+
+#main_qsubmit{
+	margin-top:5px;
+/*	width:100%; */
+	padding-left:3px;
+	padding-right:3px;
+	font-size:15px;
+}
+
+#main_stopdriving{
+	margin-top:5px;
+	font-size:15px;
+	padding-left:3px;
+	padding-right:3px;
+	float:right;
+}
+
+#main_logout{
+	font-size:15px;
+	float:right;
+	margin-top:10px;
 	padding-left:8px;
 	padding-right:8px;
 }
 
 #main_admin{
-	position:absolute;
-	bottom:0;
-	left:1;
-	margin-bottom:5px;
-	padding-left:8px;
-	padding-right:8px;
+	font-size:15px;
+	margin-top:10px;
 }
 
 #main_connect{
-	position:absolute;
-	bottom:0;
-	left:1;
-	font-size:14px;
+	font-size:15px;
 	padding-left:3px;
 	padding-right:3px;
-	margin-bottom:50px;
+	margin-top:10px;
 }
 
 #main_take_control{
-	position:absolute;
-	bottom:0;
-	right:0;
-	font-size:14px;
+	font-size:15px;
+	float:right;
+	margin-top:10px;
 	padding-left:3px;
 	padding-right:3px;
-	margin-bottom:50px;
 }
 
 #main_stream{
