--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -122,6 +122,11 @@ textarea{
 	min-width:60%;
 }
 
+#Carstream{
+	width:100%;
+	height:100%;
+}
+
 #main_chat{
 	margin-left:5px;
 	border:1px solid #ECD6BF;
