--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -263,8 +263,8 @@ textarea{
 	border:1px solid #ECD6BF;
 	padding: 3px;
 	height: auto !important;
-	height: 75%;
-	min-height: 75%;
+	height: 70%;
+	min-height: 70%;
 	border-radius: 4px;
 	box-shadow:
         0 2px 2px rgba(0,0,0,0.2),
@@ -281,12 +281,15 @@ textarea{
         0 1px 5px rgba(0,0,0,0.2),
         0 0 0 12px rgba(255,255,255,0.4);
 	height: auto !important;
-	height: 19%;
-	min-height: 19%;
+	height: 23%;
+	min-height: 23%;
 }
 
 #main_control_table{
-width:100%;
+	width:100%;
+	height: auto !important;
+	height: 100%;
+	min-height: 100%;
 }
 
 #main_steering{
@@ -297,7 +300,7 @@ width:100%;
     border-radius: 4px;
     margin-left:4px;
     margin-top: 8px;
-	width:45%; 
+	width:50%; 
 }
 
 #main_gadget{
@@ -308,7 +311,7 @@ width:100%;
     border-radius: 4px;
     margin-left:4px;
     margin-top: 8px;
-	width:30%;
+	width:25%;
 }
 
 .main_slider{
