--- a/carduinowebdroid/WebContent/static/style.css
+++ b/carduinowebdroid/WebContent/static/style.css
@@ -490,8 +490,8 @@ width:100%;
 	margin-top:4px !important;
 }
 
-#CarStream
+#image
 {
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
 }
